[gd_scene load_steps=42 format=3 uid="uid://dr6xwfxu4m151"]

[ext_resource type="Script" path="res://TestScene3/Scenes/SplittingSlime.gd" id="1_5pi7o"]
[ext_resource type="Texture2D" uid="uid://857ix1m1uvg7" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack1.png" id="2_5nmhc"]
[ext_resource type="Texture2D" uid="uid://c328yp2edr8bg" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack2.png" id="3_d5pis"]
[ext_resource type="Script" path="res://TestScene3/Scripts/HitBox.gd" id="3_u5mni"]
[ext_resource type="Texture2D" uid="uid://b1n7yexfu7j2" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack3.png" id="4_8joxa"]
[ext_resource type="Script" path="res://TestScene3/Scripts/HurtBox.gd" id="4_eqh3d"]
[ext_resource type="Texture2D" uid="uid://2owxp23g6m6j" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack4.png" id="5_vpq6c"]
[ext_resource type="Texture2D" uid="uid://dqqrcbkjnol4t" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack5.png" id="6_pdbio"]
[ext_resource type="Texture2D" uid="uid://dciop3wiowa34" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack6.png" id="7_hbeln"]
[ext_resource type="Texture2D" uid="uid://3kovcub7mxo7" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack7.png" id="8_7gj0s"]
[ext_resource type="Texture2D" uid="uid://23js5nau3eer" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack8.png" id="9_2hso3"]
[ext_resource type="Texture2D" uid="uid://vmo43jarjbr4" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack9.png" id="10_6jwtm"]
[ext_resource type="Texture2D" uid="uid://go0qhdbx4n26" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack10.png" id="11_sbq8o"]
[ext_resource type="Texture2D" uid="uid://cqc4qtnyw3mh1" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack11.png" id="12_j1obi"]
[ext_resource type="Texture2D" uid="uid://bdubp81hrnr1s" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack12.png" id="13_b4gk1"]
[ext_resource type="Texture2D" uid="uid://ei1sgmq71ipm" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack13.png" id="14_tigcd"]
[ext_resource type="Texture2D" uid="uid://dp7fv52wct3e4" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack14.png" id="15_a1jtu"]
[ext_resource type="Texture2D" uid="uid://cb5mhjgv6xjud" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death1.png" id="16_a2dfs"]
[ext_resource type="Texture2D" uid="uid://ba01ve7ntjvut" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death2.png" id="17_yxdfe"]
[ext_resource type="Texture2D" uid="uid://p4l2ftanguko" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death3.png" id="18_0sxbg"]
[ext_resource type="Texture2D" uid="uid://cvv1it13vj3ug" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death4.png" id="19_n6um0"]
[ext_resource type="Texture2D" uid="uid://cghoeul7aawqq" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death5.png" id="20_tx1mg"]
[ext_resource type="Texture2D" uid="uid://b8clcogmjdkue" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death6.png" id="21_pqpfc"]
[ext_resource type="Texture2D" uid="uid://cw0u58tf5ravf" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death7.png" id="22_0aiyf"]
[ext_resource type="Texture2D" uid="uid://n4yte56ccfww" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death8.png" id="23_skp2i"]
[ext_resource type="Texture2D" uid="uid://xtn52sqmqfwk" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death9.png" id="24_8gpyc"]
[ext_resource type="Texture2D" uid="uid://sl7qe8ny6fgh" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death10.png" id="25_mjijw"]
[ext_resource type="Texture2D" uid="uid://s7mlirm7qd5a" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death11.png" id="26_nergh"]
[ext_resource type="Texture2D" uid="uid://c4pfxx4ndlhh2" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Idle/png/SlimeBlue_Idle1.png" id="27_ng78k"]
[ext_resource type="Texture2D" uid="uid://cn38s14b5dtoh" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Idle/png/SlimeBlue_Idle2.png" id="28_q3d5u"]
[ext_resource type="Texture2D" uid="uid://ddesqvoxcytaj" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Idle/png/SlimeBlue_Idle3.png" id="29_4afr3"]
[ext_resource type="Texture2D" uid="uid://jeu57vn7xj88" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Idle/png/SlimeBlue_Idle4.png" id="30_b53gl"]
[ext_resource type="Texture2D" uid="uid://bg7dpdjc8xp1g" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump2.png" id="31_ncc7j"]
[ext_resource type="Texture2D" uid="uid://cq6pb7lo708ls" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump15.png" id="32_hqbmc"]
[ext_resource type="Texture2D" uid="uid://d5ct3waohuye" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump3.png" id="33_0wngb"]
[ext_resource type="Texture2D" uid="uid://ba0yiptbxxg35" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump14.png" id="34_r4cf2"]
[ext_resource type="Texture2D" uid="uid://blm0pj45qaqx7" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump4.png" id="35_hi1io"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ybsll"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5nmhc")
}, {
"duration": 1.0,
"texture": ExtResource("3_d5pis")
}, {
"duration": 1.0,
"texture": ExtResource("4_8joxa")
}, {
"duration": 1.0,
"texture": ExtResource("5_vpq6c")
}, {
"duration": 1.0,
"texture": ExtResource("6_pdbio")
}, {
"duration": 1.0,
"texture": ExtResource("7_hbeln")
}, {
"duration": 1.0,
"texture": ExtResource("8_7gj0s")
}, {
"duration": 1.0,
"texture": ExtResource("9_2hso3")
}, {
"duration": 1.0,
"texture": ExtResource("10_6jwtm")
}, {
"duration": 1.0,
"texture": ExtResource("11_sbq8o")
}, {
"duration": 1.0,
"texture": ExtResource("12_j1obi")
}, {
"duration": 1.0,
"texture": ExtResource("13_b4gk1")
}, {
"duration": 1.0,
"texture": ExtResource("14_tigcd")
}, {
"duration": 1.0,
"texture": ExtResource("15_a1jtu")
}],
"loop": true,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_a2dfs")
}, {
"duration": 1.0,
"texture": ExtResource("17_yxdfe")
}, {
"duration": 1.0,
"texture": ExtResource("18_0sxbg")
}, {
"duration": 1.0,
"texture": ExtResource("19_n6um0")
}, {
"duration": 1.0,
"texture": ExtResource("20_tx1mg")
}, {
"duration": 1.0,
"texture": ExtResource("21_pqpfc")
}, {
"duration": 1.0,
"texture": ExtResource("22_0aiyf")
}, {
"duration": 1.0,
"texture": ExtResource("23_skp2i")
}, {
"duration": 1.0,
"texture": ExtResource("24_8gpyc")
}, {
"duration": 1.0,
"texture": ExtResource("25_mjijw")
}, {
"duration": 1.0,
"texture": ExtResource("26_nergh")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_ng78k")
}, {
"duration": 1.0,
"texture": ExtResource("28_q3d5u")
}, {
"duration": 1.0,
"texture": ExtResource("29_4afr3")
}, {
"duration": 1.0,
"texture": ExtResource("30_b53gl")
}],
"loop": true,
"name": &"IdleOrMove",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("31_ncc7j")
}, {
"duration": 1.0,
"texture": ExtResource("32_hqbmc")
}, {
"duration": 1.0,
"texture": ExtResource("33_0wngb")
}, {
"duration": 1.0,
"texture": ExtResource("34_r4cf2")
}, {
"duration": 1.0,
"texture": ExtResource("35_hi1io")
}],
"loop": false,
"name": &"TakeDamage",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_st6qy"]
size = Vector2(18.5, 11.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rfldk"]
size = Vector2(18, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mpf1s"]
size = Vector2(18, 12)

[node name="Enemy3" type="CharacterBody2D"]
modulate = Color(0.309804, 0.807843, 0.698039, 1)
self_modulate = Color(0.85098, 0.611765, 0.529412, 1)
top_level = true
scale = Vector2(6, 6)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_5pi7o")

[node name="TransformAdjustment" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TransformAdjustment"]
sprite_frames = SubResource("SpriteFrames_ybsll")
animation = &"Death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1.25, 15.25)
shape = SubResource("RectangleShape2D_st6qy")

[node name="HitBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0
script = ExtResource("3_u5mni")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(1, 15)
shape = SubResource("RectangleShape2D_rfldk")

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 4
script = ExtResource("4_eqh3d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1, 15.5)
shape = SubResource("RectangleShape2D_mpf1s")

[node name="DisableTimer" type="Timer" parent="HurtBox"]
wait_time = 0.5

[connection signal="area_entered" from="HurtBox" to="HurtBox" method="_on_area_entered"]
[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="HurtBox/DisableTimer" to="HurtBox" method="_on_disable_timer_timeout"]
